# SafeArea

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/cpp/: capture.cpp  capture.cpp.backup  main.cpp  motion.cpp
src/hpp/: example.hpp  pointcloud.hpp  projection.hpp  transform.hpp
